# tr-to-finary

./: .gitignore  README.md  install.bat  pyproject.toml  start.bat
tr_to_finary/: aggregator.py  cli.py  finary_sync.py  parser_tr.py  setup_wizard.py  sync_state.py  tr_export.py  ui.py  utils.py  web.py
tr_to_finary/static/: app.js  style.css
tr_to_finary/templates/: base.html  dashboard.html  settings.html  sync.html  transactions.html
